--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links
 main:
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
-  - title: "Pages"
+  - title: "文章"
     url: /page-archive/
-  - title: "External Link"
+  - title: "类别"
+    url: /categories/
+  - title: "标签"
+    url: /tags/
+  - title: "詹姆斯下士"
     url: https://space.bilibili.com/1561748576
