--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ google_site_verification : "0px-chlmMRIi9hPjqmwdA1L7g8kyVWGSgJBywqM0Bvg"
 bing_site_verification   :
 naver_site_verification  :
 yandex_site_verification :
-baidu_site_verification  :
+baidu_site_verification  : "code-yRh9QOgKPk"
 
 # Social Sharing
 twitter:
