--- a/_config.yml
+++ b/_config.yml
@@ -183,6 +183,11 @@ kramdown:
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
 
+# Collections
+collections:
+  posts:
+    output: true
+    permalink: /:collection/:path/
 
 # Sass/SCSS
 sass:
